fixed tiny issue with z-indexes of the scrollbars

--- a/css/layout.css
+++ b/css/layout.css
@@ -17,4 +17,4 @@ p { display: block; }
 .box4 p { width: 1500px; }
 .box5 p {  }
 .box6 { padding: 30px; }
-.inner-div { width: 100px; height: 185px; background: #eee; }
+.inner-div { width: 235px; height: 185px; background: #eee; }
